<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in_text"
        android:layout_marginStart="20dp" />

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="8dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_text" />

        <EditText
            android:id="@+id/id_input"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/id_input_hint"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/duplication_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duplication_text"
            android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_info"
        android:layout_gravity="center"
        android:textSize="12sp"/>
    <LinearLayout
        android:id="@+id/password_commit_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/password_commit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_commit_text" />

        <EditText
            android:id="@+id/password_commit_input"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp" />


    </LinearLayout>


    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:layout_marginRight="80dp" />

</LinearLayout>