<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cody_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/category_txtView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/category_txt" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/color_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/color_txtView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/color_txt" />

            <Spinner
                android:id="@+id/color_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/style_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/style_txtView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/style_txt" />

            <Spinner
                android:id="@+id/style_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <LinearLayout
            android:id="@+id/codyImg_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <GridView
                android:id="@+id/cloth_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:columnWidth="100dp"
                android:horizontalSpacing="10dp"
                android:verticalSpacing="10dp"
                android:numColumns="auto_fit">

            </GridView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
                <Button
                    android:id="@+id/change_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/change_btn1"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cloth_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="invisible">
            <ImageView
                android:id="@+id/cody_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"/>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:text="@string/reset_btn" />

        <Button
            android:id="@+id/done_btn"
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:text="@string/done_btn"/>
    </LinearLayout>
</LinearLayout>